[package]
name = 'luna-rs'
version = '0.1.0'
edition = '2024'
license = 'GPL-3.0-or-later'
description = 'Packet generator with precise timing behavior'
readme = 'README.md'
repository = 'https://github.com/airtower-luna/luna-rs'

[dependencies]
clap = { version = '4', features = ['cargo', 'derive'] }
libc = '0.2.171'
nix = { version = '0.29.0', features = ['mman', 'net', 'resource', 'socket', 'time', 'uio'] }
pyo3 = { version = '0.24.1', features = [], optional = true }

[build-dependencies]
pyo3-build-config = { version = '0.24.1', optional = true }

[features]
default = ['python']
python = ['pyo3', 'pyo3-build-config']

[workspace]
members = ['luna-py']

[workspace.package]
edition = '2024'
