[package]
name = "luna-py"
version = "0.1.0"
edition.workspace = true

[dependencies]
luna-rs = { path = '../' }
pyo3 = { version = "0.24.1", features = ["extension-module"] }
nix = { version = '0.29.0', features = ['time'] }

[lib]
# must match the name of the #[pymodule]
name = "luna_py"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = { version = "0.24.1" }
