[package]
name = 'luna-py'
version = '0.1.0'
edition.workspace = true

[dependencies]
luna-rs = { path = '../', default-features = false }
pyo3 = { version = '0.27', features = ['extension-module'] }
nix = { version = '0.30', features = ['time'] }

[lib]
# must match the name of the #[pymodule]
name = "luna"
crate-type = ['cdylib']

[build-dependencies]
pyo3-build-config = { version = '0.27' }
